Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26382

GDB "Additional Startup Commands" Variables are not processed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 6.0.0-beta2
    • Qt Creator 5.0.2
    • Debugger
    • None
    • Linux/X11
    • fcc981937fe92fd41994008610a351d90ea3acaa (qt-creator/qt-creator/6.0)

      In the "Additional Startup commands" variables may get insterted. They seem not to get resolved.

      For example this startup command:

       set solib-search-path %{ActiveProject:BuildConfig:Path}

      If the debugger is started and "show solib-search-path" is entered as a debugger command, the response is:

      <438show solib-search-path
      {{ >&"show solib-search-path\n"}}
      {{ >~"The search path for loading non-absolute shared library symbol files is %{ActiveProject:BuildConfig:Path}.\n"}}
      {{ >438^done}}
      {{ }}

       

      So the variable doesn't get gesolved.

       

      Entering the full path for solib-search-path manually works. But only if the path is not quoted (e.g. using ").

        For Gerrit Dashboard: QTCREATORBUG-26382
        # Subject Branch Project Status CR V

            hjk hjk
            k-h.sch Karl-Heinz Schneider
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes