Debugger: Expand macros in "Additional Startup Commands"

Fixes: QTCREATORBUG-26382
Change-Id: I43cc2ac9451dbb44bcc12ed8555535fb8b4e437e
Reviewed-by: Artem Sokolovskii <artem.sokolovskii@qt.io>
Reviewed-by: Christian Stenger <christian.stenger@qt.io>